--- a/css/style.css
+++ b/css/style.css
@@ -387,12 +387,18 @@
 }
 .bg-breadcrumb11 {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/AboutUs.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
 }
 .bg-breadcrumb12 {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/SliderCourses.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/AboutUs.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
 }
 .bg-breadcrumb13 {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/contact.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/AboutUs.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
 }
 
 @media (min-width: 992px) {
